# GagTelegram-Bot

./: .env.example  .gitignore  index.js  package-lock.json  package.json  usersdb.json
src/: proxmox.js  random.js
src/config/: database.js  logger.js
src/handlers/: actionHandlers.js  commandHandlers.js  handlers.js  hearsHandlers.js  sac.js
src/services/: proxmox.js  raceChecker.js  random.js  reminders.js  variables.js
tools/sac-dashboard/: .env.example  main.py  pyproject.toml  sac.json  test.ipynb
tools/sac-dashboard/src/: main.py
tools/sac-dashboard/src/charts/: word_cloud.py
